welcome.lessons.welcome.array.maxvalue.Extrema.scala.error
extrema:8: error: ')' expected but 'if' found.
		if(nums(c) < nums(c-1) {
                ^extrema:11: error: ')' expected but '}' found.
	}
        ^